testsuite/tests/parser/should_fail/T17594c.hs
module T17594c where

foo :: forall a m. Monad m => a -> m a
foo x = do
  @a <- undefined
  return (x :: a)
